# pegy_tracker

./: LICENSE  README.md  pyproject.toml
docs/issues/: add-testing-suite.md
src/pegy_tracker/calculations/: metrics.py  pegy.py  validation.py
src/pegy_tracker/cli/: main.py
src/pegy_tracker/config/: settings.py
src/pegy_tracker/domain/: models.py
src/pegy_tracker/markets/: base.py  norway.py
src/pegy_tracker/orchestration/: pipeline.py
src/pegy_tracker/providers/: base.py  registry.py
src/pegy_tracker/providers/alphavantage/: client.py  provider.py
src/pegy_tracker/providers/eodhd/: client.py  mapper.py
src/pegy_tracker/screening/: rules.py
src/pegy_tracker/storage/: db.py  repositories.py  schema.sql
tests/: test_metrics.py  test_pegy_calculator.py  test_pipeline.py  test_validation.py
